Fixed scrolling on drag on mobile

--- a/src/styles/scss/Matrix/PostIt.scss
+++ b/src/styles/scss/Matrix/PostIt.scss
@@ -10,6 +10,10 @@
     display: flex;
 }
 
+.PostIt * {
+    touch-action: none;
+}
+
 .big, .vertical {
     flex-direction: column;
 }
